--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <h1 class="project-name">Stellar member SNS search</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/acaever/-SNS-apk" class="btn">View on GitHub</a>
-      <a href="https://github.com/acaever/-SNS-apk/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/acaever/-SNS-apk/tarball/master" class="btn">Download .tar.gz</a>
+
     </section>
 
     <section class="main-content">
@@ -33,10 +32,10 @@
 <p>인스타그램 해당멤버별로 검색이 불가하여 인스타그램으로 1차 필터링후 그냥 추가로 단어를 넣는 방식으로 변경 
 site://www.instagram.com gy_stellar</p>
 
-<p><a href="https://drive.google.com/open?id=0B7dFofzXIIEMU19ibFVNWTNfYWM">가영SNS검색 apk</a><br><br>
-<a href="https://drive.google.com/open?id=0B7dFofzXIIEMOElzNzF2cERDZnc">민희SNS검색 apk</a><br><br>
-<a href="https://drive.google.com/open?id=0B7dFofzXIIEMQm9qLWpzZVVoSzg">효은SNS검색 apk</a><br><br>
-<a href="https://drive.google.com/open?id=0B7dFofzXIIEMSHpxeFAxSWRIOUk">전율SNS검색 apk</a><br><br></p>
+<p><a href="https://drive.google.com/open?id=0B7dFofzXIIEMU19ibFVNWTNfYWM" class="btn">가영SNS검색 apk</a><br><br>
+<a href="https://drive.google.com/open?id=0B7dFofzXIIEMOElzNzF2cERDZnc" class="btn">민희SNS검색 apk</a><br><br>
+<a href="https://drive.google.com/open?id=0B7dFofzXIIEMQm9qLWpzZVVoSzg" class="btn">효은SNS검색 apk</a><br><br>
+<a href="https://drive.google.com/open?id=0B7dFofzXIIEMSHpxeFAxSWRIOUk" class="btn">전율SNS검색 apk</a><br><br></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/acaever/-SNS-apk">Stellar member SNS search</a> is maintained by <a href="https://github.com/acaever">acaever</a>.</span>
