--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Stellar member SNS search</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/acaever/-SNS-apk" class="btn">View on GitHub</a>
+  
 <a href="https://drive.google.com/open?id=0B7dFofzXIIEMU19ibFVNWTNfYWM" class="btn">가영SNS검색</a>
 <a href="https://drive.google.com/open?id=0B7dFofzXIIEMOElzNzF2cERDZnc" class="btn">민희SNS검색</a>
 <a href="https://drive.google.com/open?id=0B7dFofzXIIEMQm9qLWpzZVVoSzg" class="btn">효은SNS검색</a>
@@ -29,13 +29,11 @@
 <li>구글검색어를 넣는 방식으로 하단에 내용을 보여주는 방식</li>
 </ul>
 
-<p>필터링방법
-트위터 site://twitter.com/Stellar_GY</p>
+      <p>필터링방법</p>
+<p>트위터 <a href="https://twitter.com/Stellar_GY">site://twitter.com/Stellar_GY</a></p>
 
-<p>인스타그램 해당멤버별로 검색이 불가하여 인스타그램으로 1차 필터링후 그냥 추가로 단어를 넣는 방식으로 변경 
-site://www.instagram.com gy_stellar</p>
-
-
+<p>인스타그램 <a href="https://www.instagram.com/gy_stellar/">site://www.instagram.com</a> gy_stellar</p>
+  <p>멤버계정별 필터링불가하여 인스타그램주소로 1차 필터링후, 추가로 단어를 넣는 방식으로 범위를 줄임</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/acaever/-SNS-apk">Stellar member SNS search</a> is maintained by <a href="https://github.com/acaever">acaever</a>.</span>
